[fix]-fix all swagger
