# identity/app/Http/Controllers/TokenController.php
@@ -4,9 +4,32 @@ namespace App\Http\Controllers;
 
 use App\Services\ApiResponseService;
 use App\Services\TokenService;
+use App\Http\Controllers\ApiController;
 
 class TokenController extends Controller
 {
+     /**
+     * @OA\Get(
+     *     path="/api/token",
+     *     summary="Génère un nouveau token",
+     *     description="Génère un nouveau token pour l'application.",
+     *     tags={"token"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Token généré avec succès.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string", example="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Erreur serveur.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="Erreur interne.")
+     *         )
+     *     )
+     * )
+     */
     public function index()
     {
         $data = array();
@@ -25,6 +48,35 @@ class TokenController extends Controller
         return ApiResponseService::apiResponse($status,$message,$data,$errors);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/token/generate/{id_account}",
+     *     summary="Génère un modèle de token pour un utilisateur",
+     *     description="Génère un modèle de token pour un utilisateur spécifique en fonction de l'ID de compte.",
+     *     tags={"token"},
+     *     @OA\Parameter(
+     *         name="id_account",
+     *         in="path",
+     *         required=true,
+     *         description="ID de l'utilisateur pour générer le modèle de token.",
+     *         @OA\Schema(type="integer", example=123)
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Modèle de token généré avec succès.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token_model", type="string", example="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=399,
+     *         description="Erreur lors de la génération du token.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="ID de compte invalide.")
+     *         )
+     *     )
+     * )
+     */
     public function generate($id_account): \Illuminate\Http\JsonResponse
     {
 
@@ -50,6 +102,35 @@ class TokenController extends Controller
         return ApiResponseService::apiResponse($status,$message,$data,$errors);
     }
 
+        /**
+     * @OA\Get(
+     *     path="/api/token/regenerate/{id_account}",
+     *     summary="Regénère un token pour un utilisateur",
+     *     description="Regénère un token pour un utilisateur spécifique en fonction de l'ID de compte.",
+     *     tags={"token"},
+     *     @OA\Parameter(
+     *         name="id_account",
+     *         in="path",
+     *         required=true,
+     *         description="ID de l'utilisateur pour régénérer le token.",
+     *         @OA\Schema(type="integer", example=123)
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Token régénéré avec succès.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="token", type="string", example="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=399,
+     *         description="Erreur lors de la régénération du token.",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="error", type="string", example="ID de compte invalide.")
+     *         )
+     *     )
+     * )
+     */
     public function regenerate($id_account)
     {
 
